scroll snap and dark mode ghosting fix

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -43,7 +43,7 @@ $light-colors: (
 );
 
 $dark-colors: (
-	bg:						#000000,
+	bg:						#060708,
 	bg-highlight:			#13131b,
 	brand:					#BEA761,
 	brand-highlight:		#353022,
